--- a/src/index.css
+++ b/src/index.css
@@ -4,16 +4,16 @@
 
 
 .info{
-  background-color: rgb(66, 169, 247);
+  background-color: #60a5fa;
 }
 .success{
-  background-color: rgb(25, 110, 25);
+  background-color: #4ade80;
 }
 .error{
-  background-color: rgb(150, 42, 42);
+  background-color: #f87171;
 }
 .warning{
-  background-color: rgb(165, 165, 43);
+  background-color:#facc15;
 }
 
 .top-right{
@@ -36,3 +36,24 @@
   bottom: 20px;
   right: 20px;
 }
+
+button{
+  width: 100%;
+  height: 100%;
+}
+
+.zoomup{
+  animation:  zoomup 0.9s 1; 
+}
+@keyframes zoomup {
+  from {
+    transform: translateX(100%);
+  }
+  50% {
+    transform: translateX(-10%);
+  }
+  to {
+    transform: translateX(0%);
+  }
+}
+
